--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.13.0",
     "@react-three/drei": "^9.111.3",
     "@react-three/fiber": "^8.17.6",
+    "@react-three/xr": "^6.2.1",
+    "aframe": "^1.6.0",
     "framer-motion": "^11.3.30",
     "next": "14.2.6",
     "react": "^18",
